# sokol_cg_final_proj

./: .gitignore  CMakeLists.txt  camera.hpp  collision_verify.hpp  game.cpp  game.hpp  ideas.md  level.hpp  main.cpp  map_array_generator.hpp  obj_loader.hpp  object_collection.hpp  shader.hpp  sokol_impl.cpp  test_run.sh
